[QA-2054] Fix overflowing remix text (#11812)

--- a/packages/web/src/components/data-entry/ContextualMenu.module.css
+++ b/packages/web/src/components/data-entry/ContextualMenu.module.css
@@ -39,7 +39,6 @@
 
 .selectedValue {
   position: relative;
-  height: 28px;
   display: inline-flex;
   align-self: flex-start;
   padding: var(--harmony-unit-1) var(--harmony-unit-2);
